# cpdp3

./: .dockerignore  Dockerfile  docker-compose.yaml  hello.py  pyproject.toml
src/: manage.py
src/app_blog/: urls.py  utility.py
src/app_blog/migrations/: 0001_bikin_table_blog_post.py
src/app_blog/templates/app_blog/: create.html  index.html  list_post.html  read.html
src/app_blog/views/: __init__.py  create.py  list.py  read.py
src/app_landing/: urls.py  views.py
src/app_landing/templates/app_landing/: index.html
src/cpdp/: asgi.py  settings.py  urls.py  wsgi.py
